Restoring some changes, which disappear (I don't know why)